imported the app offline that was on the server past few weeks. now working to reupload updated not scary "under construction page"

--- a/MessiahSoftwareSolutions.com/_app_offline.htm
+++ b/MessiahSoftwareSolutions.com/_app_offline.htm
@@ -2,22 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Under Construction!</title>
+	<meta name="robots" content="noindex">
+    <title>"Messiah - Software Solutions Ltd" is under construction!</title>
 </head>
 <body>
 
     <br /><br />
-    Messiah - Software Solutions LTD website will be soon online!
-    <br /><br />
-    Meanwhile the master pushes code / reflects on the brand and on the life.
-    
-    <br />
-    <br />
-    <a href="https://facebook.com/vadimrasin">facebook.com/vadimrasin</a>
-    <br />
-    <br />
-    <a href="https://twitter.com/hsvdrv">twitter.com/hsvdrv</a>
-
+	<div style="text-align:center">
+		"Messiah - Software Solutions LTD" website is under construction!
+	<div>
 
 </body>
 </html>
