--- a/MessiahSolutionsComFrontEnd/EmailTemplates/ContactUs-en.html
+++ b/MessiahSolutionsComFrontEnd/EmailTemplates/ContactUs-en.html
@@ -401,7 +401,7 @@
                                                         <td style="padding-top: 20px; padding-left: 10px;">
                                                             <div class="text-project" style="text-align: center;">
                                                                 <h3>Email</h3>
-                                                                <span style="font-weight:bold">{{Email}}</span>
+                                                                <span style="font-weight:bold">{{email}}</span>
                                                             </div>
                                                         </td>
                                                     </tr>
