Many project changes following ~week of work on/off ..   Converted umbraco.sdf to local db in preparations for version upload / remote content managemen. + Added projects / projects types and project details page, Out history page (under aboutUs) + general CSS fixes for accessibility / general layout in custom-new.css and style.css also made a small change in core.min.js removed sharing optionality to google+

--- a/MessiahSolutionsComFrontEnd/PurchasedWebTemplate/single-project.html
+++ b/MessiahSolutionsComFrontEnd/PurchasedWebTemplate/single-project.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
     <!-- Site Title-->
@@ -253,6 +253,8 @@
           </div>
         </div>
       </section>
+
+      <!-- project testimonials feedback -->
       <section class="section section-lg text-center bg-default">
         <div class="container container-wide">
           <div class="row row-50 justify-content-md-center">
@@ -293,6 +295,7 @@
           </div>
         </div>
       </section>
+
       <!-- CTA-->
       <section class="section section-xs text-center bg-gray-dark">
         <div class="container-wide">
